--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -476,12 +476,37 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .btn-sage-200:active {
   --tw-bg-opacity: 1;
-  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+  background-color: rgb(89 108 110 / var(--tw-bg-opacity));
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(13 148 136 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(89 108 110 / var(--tw-ring-opacity));
+}
+.btn-sage-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 192 193 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(71 86 88 / var(--tw-text-opacity));
+}
+.btn-sage-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 192 193 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(71 86 88 / var(--tw-text-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(179 192 193 / var(--tw-ring-opacity));
+}
+.btn-sage-300:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 86 88 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(243 245 246 / var(--tw-text-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(71 86 88 / var(--tw-ring-opacity));
 }
 .btn-disabled-sage-200 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1754,6 +1779,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
 }
+.bg-sage-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 86 88 / var(--tw-bg-opacity));
+}
 .bg-contain {
   background-size: contain;
 }
@@ -2306,13 +2335,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(64 71 100 / var(--tw-text-opacity));
 }
-.text-primary-200 {
+.text-sage-50 {
   --tw-text-opacity: 1;
-  color: rgb(240 214 199 / var(--tw-text-opacity));
+  color: rgb(243 245 246 / var(--tw-text-opacity));
+}
+.text-sage-700 {
+  --tw-text-opacity: 1;
+  color: rgb(71 86 88 / var(--tw-text-opacity));
 }
 .text-sage-400 {
   --tw-text-opacity: 1;
   color: rgb(149 167 170 / var(--tw-text-opacity));
+}
+.text-sage-600 {
+  --tw-text-opacity: 1;
+  color: rgb(89 108 110 / var(--tw-text-opacity));
+}
+.text-primary-200 {
+  --tw-text-opacity: 1;
+  color: rgb(240 214 199 / var(--tw-text-opacity));
 }
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
@@ -2710,6 +2751,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .last\:mb-0:last-child {
   margin-bottom: 0px;
 }
+.last\:border-0:last-child {
+  border-width: 0px;
+}
+.last\:pb-0:last-child {
+  padding-bottom: 0px;
+}
 .checked\:border-success-500:checked {
   --tw-border-opacity: 1;
   border-color: rgb(105 151 151 / var(--tw-border-opacity));
@@ -2725,6 +2772,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+.hover\:border-2:hover {
+  border-width: 2px;
 }
 .hover\:border-4:hover {
   border-width: 4px;
@@ -2808,6 +2858,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .hover\:ring-offset-primary-300:hover {
   --tw-ring-offset-color: #CDA7A7;
+}
+.hover\:ring-offset-sage-700:hover {
+  --tw-ring-offset-color: #475658;
 }
 .hover\:ring-offset-primary-600:hover {
   --tw-ring-offset-color: var(--primary-plum-600);
@@ -4071,6 +4124,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:leading-normal {
     line-height: 1.5;
   }
+  .desktop\:shadow-2xl {
+    --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
 }
 .blog-content a {
   font-weight: 600;
@@ -4211,6 +4269,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --primary-plum-600: #5f3d3d;
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
+  --sage-700: #475658;
   --neutral-50: #fcfafb;
   --neutral-400: #d0c9cd;
   --neutral-500: #a1929a;
