added new login modal and signup modal animations

--- a/styles/app.css
+++ b/styles/app.css
@@ -24,6 +24,7 @@
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
   --sage-700: #475658;
+  --navy-50: #f7f8fa;
   --neutral-50: #fcfafb;
   --neutral-400: #d0c9cd;
   --neutral-500: #a1929a;
