--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -780,8 +780,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-auto {
   left: auto;
 }
+.top-\[-4\%\] {
+  top: -4%;
+}
+.left-\[47\%\] {
+  left: 47%;
+}
+.top-4 {
+  top: 1rem;
+}
+.right-4 {
+  right: 1rem;
+}
 .right-\[-20px\] {
   right: -20px;
+}
+.top-\[-11px\] {
+  top: -11px;
+}
+.right-\[-11px\] {
+  right: -11px;
 }
 .top-\[68px\] {
   top: 68px;
@@ -854,6 +872,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .z-30 {
   z-index: 30;
+}
+.z-\[1\] {
+  z-index: 1;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -1159,6 +1180,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-\[38px\] {
   height: 38px;
 }
+.h-\[58px\] {
+  height: 58px;
+}
+.h-\[22px\] {
+  height: 22px;
+}
 .h-14 {
   height: 3.5rem;
 }
@@ -1264,6 +1291,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[38px\] {
   width: 38px;
 }
+.w-\[57px\] {
+  width: 57px;
+}
+.w-\[22px\] {
+  width: 22px;
+}
 .w-14 {
   width: 3.5rem;
 }
@@ -1272,9 +1305,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-screen {
   width: 100vw;
-}
-.w-\[57px\] {
-  width: 57px;
 }
 .w-\[800px\] {
   width: 800px;
@@ -1357,6 +1387,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[500px\] {
   max-width: 500px;
 }
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+.max-w-\[372px\] {
+  max-width: 372px;
+}
+.max-w-\[360px\] {
+  max-width: 360px;
+}
 .max-w-\[144px\] {
   max-width: 144px;
 }
@@ -1392,6 +1431,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[347px\] {
   max-width: 347px;
+}
+.max-w-\[2750px\] {
+  max-width: 2750px;
 }
 .flex-\[1\] {
   flex: 1;
@@ -1618,6 +1660,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-\[3px\] {
   border-radius: 3px;
 }
+.rounded-\[4px\] {
+  border-radius: 4px;
+}
 .rounded-t-2\.5xl {
   border-top-left-radius: 1.25rem;
   border-top-right-radius: 1.25rem;
@@ -1733,6 +1778,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(246 244 245 / var(--tw-bg-opacity));
 }
+.bg-sage-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 240 241 / var(--tw-bg-opacity));
+}
 .bg-amber-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 243 199 / var(--tw-bg-opacity));
@@ -1749,9 +1798,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
+.bg-navy-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(135 154 189 / var(--tw-bg-opacity));
+}
 .bg-neutral-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(103 89 96 / var(--tw-bg-opacity));
+}
+.bg-navy-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 241 246 / var(--tw-bg-opacity));
+}
+.bg-navy-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(77 100 141 / var(--tw-bg-opacity));
 }
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
@@ -2042,6 +2103,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pr-5 {
   padding-right: 1.25rem;
 }
+.pt-4 {
+  padding-top: 1rem;
+}
 .pl-6 {
   padding-left: 1.5rem;
 }
@@ -2291,6 +2355,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(208 201 205 / var(--tw-text-opacity));
 }
+.text-sage-500 {
+  --tw-text-opacity: 1;
+  color: rgb(120 143 146 / var(--tw-text-opacity));
+}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2307,9 +2375,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
 }
+.text-navy-50 {
+  --tw-text-opacity: 1;
+  color: rgb(247 248 250 / var(--tw-text-opacity));
+}
 .text-secondary-400 {
   --tw-text-opacity: 1;
   color: rgb(242 192 102 / var(--tw-text-opacity));
+}
+.text-navy-700 {
+  --tw-text-opacity: 1;
+  color: rgb(77 100 141 / var(--tw-text-opacity));
+}
+.text-navy-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 39 55 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -2354,6 +2434,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-primary-200 {
   --tw-text-opacity: 1;
   color: rgb(240 214 199 / var(--tw-text-opacity));
+}
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
@@ -2425,6 +2509,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xxl-grey {
+  --tw-shadow: 27px 28px 43px 13px rgba(19, 15, 15, 0.34);
+  --tw-shadow-colored: 27px 28px 43px 13px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xxl-teal {
@@ -2849,6 +2938,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
 }
+.hover\:ring-sage-300:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(179 192 193 / var(--tw-ring-opacity));
+}
 .hover\:ring-primary-400:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(159 98 98 / var(--tw-ring-opacity));
@@ -2901,6 +2994,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .focus\:ring-teal-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(45 212 191 / var(--tw-ring-opacity));
+}
+.focus\:ring-sage-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(120 143 146 / var(--tw-ring-opacity));
 }
 .focus\:ring-offset-4:focus {
   --tw-ring-offset-width: 4px;
@@ -4270,6 +4367,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
   --sage-700: #475658;
+  --navy-50: #f7f8fa;
   --neutral-50: #fcfafb;
   --neutral-400: #d0c9cd;
   --neutral-500: #a1929a;
