rouged out Featured Product section

--- a/styles/app.css
+++ b/styles/app.css
@@ -30,6 +30,8 @@
   --neutral-500: #a1929a;
   --neutral-600: #8f7d87;
   --warning-700: #b45309;
+  --grey-600: #4D5561
+  --grey-700: #384050
 }
 
 @font-face {
