--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -852,6 +852,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[64px\] {
   top: 64px;
 }
+.top-\[-2\.5\%\] {
+  top: -2.5%;
+}
+.left-\[-2\.5\%\] {
+  left: -2.5%;
+}
+.top-\[-2\.8\%\] {
+  top: -2.8%;
+}
+.left-\[-2\.7\%\] {
+  left: -2.7%;
+}
+.top-\[120px\] {
+  top: 120px;
+}
+.top-\[280px\] {
+  top: 280px;
+}
 .z-10 {
   z-index: 10;
 }
@@ -870,11 +888,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-\[1050\] {
   z-index: 1050;
 }
+.z-\[1\] {
+  z-index: 1;
+}
 .z-30 {
   z-index: 30;
 }
-.z-\[1\] {
-  z-index: 1;
+.z-\[22\] {
+  z-index: 22;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -944,10 +965,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
-}
-.mx-\[-1rem\] {
-  margin-left: -1rem;
-  margin-right: -1rem;
 }
 .mx-1 {
   margin-left: 0.25rem;
@@ -1113,6 +1130,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .-ml-1 {
   margin-left: -0.25rem;
+}
+.mt-\[400px\] {
+  margin-top: 400px;
+}
+.mt-\[250px\] {
+  margin-top: 250px;
 }
 .block {
   display: block;
@@ -1330,6 +1353,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[32px\] {
   width: 32px;
 }
+.w-\[419px\] {
+  width: 419px;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -1384,11 +1410,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[1340px\] {
   max-width: 1340px;
 }
-.max-w-\[500px\] {
-  max-width: 500px;
-}
 .max-w-\[300px\] {
   max-width: 300px;
+}
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 .max-w-\[372px\] {
   max-width: 372px;
@@ -1432,8 +1458,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[347px\] {
   max-width: 347px;
 }
-.max-w-\[2750px\] {
-  max-width: 2750px;
+.max-w-xs {
+  max-width: 20rem;
+}
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+.max-w-\[417px\] {
+  max-width: 417px;
 }
 .flex-\[1\] {
   flex: 1;
@@ -1511,9 +1543,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.rotate-6 {
+  --tw-rotate: 6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-\[\.8\] {
+  --tw-scale-x: .8;
+  --tw-scale-y: .8;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-\[\.81\] {
+  --tw-scale-x: .81;
+  --tw-scale-y: .81;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -1746,10 +1792,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(208 216 217 / var(--tw-bg-opacity));
 }
-.bg-primary-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 227 220 / var(--tw-bg-opacity));
-}
 .bg-primary-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(141 92 92 / var(--tw-bg-opacity));
@@ -1843,6 +1885,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-sage-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 86 88 / var(--tw-bg-opacity));
+}
+.bg-primary-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 227 220 / var(--tw-bg-opacity));
+}
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .bg-contain {
   background-size: contain;
@@ -2016,6 +2066,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 30px;
   padding-bottom: 30px;
 }
+.px-\[6px\] {
+  padding-left: 6px;
+  padding-right: 6px;
+}
+.px-\[8px\] {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.px-\[14px\] {
+  padding-left: 14px;
+  padding-right: 14px;
+}
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -2028,14 +2094,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-8 {
   padding-bottom: 2rem;
 }
-.pb-12 {
-  padding-bottom: 3rem;
-}
 .pb-5 {
   padding-bottom: 1.25rem;
 }
 .pl-11 {
   padding-left: 2.75rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
 }
 .pt-5 {
   padding-top: 1.25rem;
@@ -2103,9 +2169,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pr-5 {
   padding-right: 1.25rem;
 }
-.pt-4 {
-  padding-top: 1rem;
-}
 .pl-6 {
   padding-left: 1.5rem;
 }
@@ -2118,6 +2181,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-16 {
   padding-bottom: 4rem;
 }
+.pt-\[80px\] {
+  padding-top: 80px;
+}
+.pt-10 {
+  padding-top: 2.5rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -2129,6 +2201,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .font-sentinel__SemiBoldItal {
   font-family: Sentinel SemiBoldItal, serif;
+}
+.font-sentinel__Book {
+  font-family: Sentinel Book, serif;
+}
+.font-sentinel__SemiBold {
+  font-family: Sentinel SemiBold, serif;
 }
 .text-6xl {
   font-size: 3.75rem;
@@ -2355,9 +2433,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(208 201 205 / var(--tw-text-opacity));
 }
-.text-sage-500 {
+.text-sage-700 {
   --tw-text-opacity: 1;
-  color: rgb(120 143 146 / var(--tw-text-opacity));
+  color: rgb(71 86 88 / var(--tw-text-opacity));
 }
 .text-gray-400 {
   --tw-text-opacity: 1;
@@ -2375,14 +2453,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
 }
-.text-navy-50 {
-  --tw-text-opacity: 1;
-  color: rgb(247 248 250 / var(--tw-text-opacity));
-}
-.text-secondary-400 {
-  --tw-text-opacity: 1;
-  color: rgb(242 192 102 / var(--tw-text-opacity));
-}
 .text-navy-700 {
   --tw-text-opacity: 1;
   color: rgb(77 100 141 / var(--tw-text-opacity));
@@ -2390,6 +2460,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-navy-900 {
   --tw-text-opacity: 1;
   color: rgb(30 39 55 / var(--tw-text-opacity));
+}
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+.text-navy-50 {
+  --tw-text-opacity: 1;
+  color: rgb(247 248 250 / var(--tw-text-opacity));
+}
+.text-secondary-400 {
+  --tw-text-opacity: 1;
+  color: rgb(242 192 102 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -2419,10 +2501,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(243 245 246 / var(--tw-text-opacity));
 }
-.text-sage-700 {
-  --tw-text-opacity: 1;
-  color: rgb(71 86 88 / var(--tw-text-opacity));
-}
 .text-sage-400 {
   --tw-text-opacity: 1;
   color: rgb(149 167 170 / var(--tw-text-opacity));
@@ -2435,9 +2513,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(240 214 199 / var(--tw-text-opacity));
 }
-.text-red-400 {
+.text-grey-500 {
   --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
+  color: rgb(109 114 127 / var(--tw-text-opacity));
 }
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
@@ -3182,6 +3260,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:top-\[50px\] {
     top: 50px;
   }
+  .tablet\:left-\[60\%\] {
+    left: 60%;
+  }
+  .tablet\:left-\[140px\] {
+    left: 140px;
+  }
+  .tablet\:left-\[56px\] {
+    left: 56px;
+  }
+  .tablet\:top-\[100px\] {
+    top: 100px;
+  }
+  .tablet\:left-\[-80px\] {
+    left: -80px;
+  }
+  .tablet\:top-\[39px\] {
+    top: 39px;
+  }
   .tablet\:z-20 {
     z-index: 20;
   }
@@ -3202,6 +3298,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:col-auto {
     grid-column: auto;
+  }
+  .tablet\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+  .tablet\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+  .tablet\:col-span-9 {
+    grid-column: span 9 / span 9;
+  }
+  .tablet\:col-span-8 {
+    grid-column: span 8 / span 8;
   }
   .tablet\:col-start-8 {
     grid-column-start: 8;
@@ -3272,6 +3380,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+  .tablet\:mx-\[25\%\] {
+    margin-left: 25%;
+    margin-right: 25%;
+  }
+  .tablet\:mx-\[20\%\] {
+    margin-left: 20%;
+    margin-right: 20%;
   }
   .tablet\:mr-2 {
     margin-right: 0.5rem;
@@ -3357,6 +3473,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mr-44 {
     margin-right: 11rem;
   }
+  .tablet\:mt-\[412\] {
+    margin-top: 412;
+  }
+  .tablet\:mt-\[412px\] {
+    margin-top: 412px;
+  }
   .tablet\:block {
     display: block;
   }
@@ -3383,6 +3505,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:w-full {
     width: 100%;
+  }
+  .tablet\:w-\[680px\] {
+    width: 680px;
+  }
+  .tablet\:w-\[50\%\] {
+    width: 50%;
+  }
+  .tablet\:w-\[70\%\] {
+    width: 70%;
   }
   .tablet\:min-w-\[753px\] {
     min-width: 753px;
@@ -3414,6 +3545,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:max-w-\[120px\] {
     max-width: 120px;
   }
+  .tablet\:max-w-\[600px\] {
+    max-width: 600px;
+  }
+  .tablet\:max-w-\[702px\] {
+    max-width: 702px;
+  }
   .tablet\:flex-\[0_1_auto\] {
     flex: 0 1 auto;
   }
@@ -3435,6 +3572,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:translate-y-\[-50\%\] {
     --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .tablet\:translate-x-0 {
+    --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .tablet\:grid-cols-tablet {
@@ -3483,6 +3624,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:rounded-2\.5xl {
     border-radius: 1.25rem;
+  }
+  .tablet\:rounded-xl {
+    border-radius: 0.75rem;
   }
   .tablet\:border-b-\[1px\] {
     border-bottom-width: 1px;
@@ -3610,6 +3754,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 @media (min-width: 1024px) {
+  .laptop\:absolute {
+    position: absolute;
+  }
   .laptop\:relative {
     position: relative;
   }
@@ -3649,6 +3796,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:top-\[-40px\] {
     top: -40px;
   }
+  .laptop\:top-\[-3\.7\%\] {
+    top: -3.7%;
+  }
+  .laptop\:left-\[-3\.7\%\] {
+    left: -3.7%;
+  }
+  .laptop\:left-\[20\%\] {
+    left: 20%;
+  }
+  .laptop\:left-\[25\%\] {
+    left: 25%;
+  }
+  .laptop\:left-\[140px\] {
+    left: 140px;
+  }
+  .laptop\:left-\[-80px\] {
+    left: -80px;
+  }
+  .laptop\:top-\[210px\] {
+    top: 210px;
+  }
+  .laptop\:left-\[-670px\] {
+    left: -670px;
+  }
+  .laptop\:top-\[30px\] {
+    top: 30px;
+  }
   .laptop\:z-0 {
     z-index: 0;
   }
@@ -3658,6 +3832,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:col-span-12 {
     grid-column: span 12 / span 12;
   }
+  .laptop\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+  .laptop\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
   .laptop\:col-start-3 {
     grid-column-start: 3;
   }
@@ -3666,6 +3846,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:col-start-8 {
     grid-column-start: 8;
+  }
+  .laptop\:col-start-6 {
+    grid-column-start: 6;
+  }
+  .laptop\:col-start-9 {
+    grid-column-start: 9;
   }
   .laptop\:col-end-\[8\] {
     grid-column-end: 8;
@@ -3678,6 +3864,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:row-start-1 {
     grid-row-start: 1;
+  }
+  .laptop\:m-0 {
+    margin: 0px;
   }
   .laptop\:mx-0 {
     margin-left: 0px;
@@ -3763,6 +3952,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:w-auto {
     width: auto;
   }
+  .laptop\:w-\[600px\] {
+    width: 600px;
+  }
+  .laptop\:w-\[700px\] {
+    width: 700px;
+  }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
   }
@@ -3799,6 +3994,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:max-w-\[410px\] {
     max-width: 410px;
   }
+  .laptop\:max-w-\[438px\] {
+    max-width: 438px;
+  }
   .laptop\:flex-\[1_1_50\%\] {
     flex: 1 1 50%;
   }
@@ -3808,6 +4006,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:rotate-\[-10deg\] {
     --tw-rotate: -10deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .laptop\:rotate-\[-3deg\] {
+    --tw-rotate: -3deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .laptop\:scale-\[\.79\] {
+    --tw-scale-x: .79;
+    --tw-scale-y: .79;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
   .laptop\:grid-flow-col {
@@ -3837,8 +4044,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:justify-center {
     justify-content: center;
   }
+  .laptop\:rounded-2\.5xl {
+    border-radius: 1.25rem;
+  }
   .laptop\:bg-inherit {
     background-color: inherit;
+  }
+  .laptop\:bg-transparent {
+    background-color: transparent;
+  }
+  .laptop\:p-0 {
+    padding: 0px;
   }
   .laptop\:px-0 {
     padding-left: 0px;
@@ -3890,6 +4106,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:pb-16 {
     padding-bottom: 4rem;
   }
+  .laptop\:pl-8 {
+    padding-left: 2rem;
+  }
   .laptop\:text-left {
     text-align: left;
   }
@@ -3921,6 +4140,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:font-medium {
     font-weight: 500;
+  }
+  .laptop\:shadow-xs {
+    --tw-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    --tw-shadow-colored: 0px 4px 8px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  .laptop\:shadow-none {
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
   .laptop\:hover\:translate-y-\[-5px\]:hover {
     --tw-translate-y: -5px;
@@ -3976,6 +4205,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:top-\[60px\] {
     top: 60px;
   }
+  .desktop\:left-\[30\%\] {
+    left: 30%;
+  }
+  .desktop\:left-\[-730px\] {
+    left: -730px;
+  }
+  .desktop\:left-\[-890px\] {
+    left: -890px;
+  }
+  .desktop\:top-0 {
+    top: 0px;
+  }
   .desktop\:col-span-5 {
     grid-column: span 5 / span 5;
   }
@@ -3984,9 +4225,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:col-span-full {
     grid-column: 1 / -1;
-  }
-  .desktop\:col-span-4 {
-    grid-column: span 4 / span 4;
   }
   .desktop\:col-span-3 {
     grid-column: span 3 / span 3;
@@ -3997,6 +4235,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-span-12 {
     grid-column: span 12 / span 12;
   }
+  .desktop\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
+  .desktop\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
   .desktop\:col-start-2 {
     grid-column-start: 2;
   }
@@ -4005,9 +4249,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:col-start-4 {
     grid-column-start: 4;
-  }
-  .desktop\:col-start-6 {
-    grid-column-start: 6;
   }
   .desktop\:col-start-1 {
     grid-column-start: 1;
@@ -4020,6 +4261,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:col-start-9 {
     grid-column-start: 9;
+  }
+  .desktop\:col-start-10 {
+    grid-column-start: 10;
   }
   .desktop\:col-end-\[8\] {
     grid-column-end: 8;
@@ -4077,6 +4321,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:mt-32 {
     margin-top: 8rem;
   }
+  .desktop\:ml-8 {
+    margin-left: 2rem;
+  }
   .desktop\:flex {
     display: flex;
   }
@@ -4095,6 +4342,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:w-\[760px\] {
     width: 760px;
   }
+  .desktop\:w-\[850px\] {
+    width: 850px;
+  }
   .desktop\:min-w-\[1265px\] {
     min-width: 1265px;
   }
@@ -4112,6 +4362,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:max-w-\[220px\] {
     max-width: 220px;
+  }
+  .desktop\:max-w-\[842px\] {
+    max-width: 842px;
   }
   .desktop\:flex-1 {
     flex: 1 1 0%;
@@ -4373,6 +4626,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --neutral-500: #a1929a;
   --neutral-600: #8f7d87;
   --warning-700: #b45309;
+  --grey-600: #4D5561
+  --grey-700: #384050
 }
 @font-face {
   font-family: "Sentinel Book";
