--- a/app/styles/global-old.css
+++ b/app/styles/global-old.css
@@ -43,7 +43,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: auto;
-  color: var(--primary-plum-600);
+  color: var(--grey-600);
 }
 
 h1,
