--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants; */
-/* ! tailwindcss v3.0.24 | MIT License | https://tailwindcss.com */
+/* ! tailwindcss v3.1.0 | MIT License | https://tailwindcss.com */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -139,6 +139,7 @@ select,
 textarea {
   font-family: inherit; /* 1 */
   font-size: 100%; /* 1 */
+  font-weight: inherit; /* 1 */
   line-height: inherit; /* 1 */
   color: inherit; /* 1 */
   margin: 0; /* 2 */
@@ -308,13 +309,55 @@ video {
   max-width: 100%;
   height: auto;
 }
-/*
-Ensure the default browser behavior of the `hidden` attribute.
-*/
-[hidden] {
-  display: none;
+::-webkit-backdrop {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
 }
-*, ::before, ::after {
+*, ::before, ::after, ::backdrop {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -482,46 +525,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(89 108 110 / var(--tw-ring-opacity));
-}
-.btn-sage-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(179 192 193 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(71 86 88 / var(--tw-text-opacity));
-}
-.btn-sage-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(179 192 193 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(71 86 88 / var(--tw-text-opacity));
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(179 192 193 / var(--tw-ring-opacity));
-}
-.btn-sage-300:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 86 88 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(243 245 246 / var(--tw-text-opacity));
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(71 86 88 / var(--tw-ring-opacity));
-}
-.btn-disabled-sage-200 {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.btn-disabled-sage-200:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
-}
-.btn-disabled-sage-200:hover:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(208 216 217 / var(--tw-bg-opacity));
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-offset-width: 0px;
 }
 .btn-teal {
   --tw-bg-opacity: 1;
@@ -1985,10 +1988,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(217 229 229 / var(--tw-bg-opacity));
 }
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
 .bg-contain {
   background-size: contain;
 }
@@ -2117,10 +2116,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 .py-9 {
   padding-top: 2.25rem;
@@ -2407,13 +2402,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .tracking-wide {
   letter-spacing: 0.025em;
 }
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .text-gray-600 {
   --tw-text-opacity: 1;
@@ -3552,9 +3547,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:h-\[450px\] {
     height: 450px;
   }
-  .tablet\:w-auto {
-    width: auto;
-  }
   .tablet\:w-\[500px\] {
     width: 500px;
   }
@@ -3575,6 +3567,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:w-full {
     width: 100%;
+  }
+  .tablet\:w-auto {
+    width: auto;
   }
   .tablet\:min-w-\[753px\] {
     min-width: 753px;
@@ -3711,10 +3706,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-  .tablet\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
   .tablet\:px-12 {
     padding-left: 3rem;
@@ -3976,9 +3967,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mb-14 {
     margin-bottom: 3.5rem;
   }
-  .laptop\:mb-0 {
-    margin-bottom: 0px;
-  }
   .laptop\:mb-16 {
     margin-bottom: 4rem;
   }
@@ -3996,6 +3984,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:mt-20 {
     margin-top: 5rem;
+  }
+  .laptop\:mb-0 {
+    margin-bottom: 0px;
   }
   .laptop\:mb-4 {
     margin-bottom: 1rem;
